# EventManager

./: .gitignore  README.md
database_details/: database_details_example.yaml
email_details/: email_details_example.yaml
email_sender/: database.py  email_sender.py  events.py  families_email_sender.py  input_reader.py  main.py  recipient.py  test.py
events/example/: example.csv  example.yaml
sender/: database.py  email_content.py  email_contents_getters.py  email_sender.py  input_reader.py  main.py  requirements.txt  utils.py
writer/: CMakeLists.txt  CSVReader.cpp  CSVReader.h  Database.cpp  Database.h  Postgres.cpp  Postgres.h  main.cpp
writer/src/: CSVReader.cpp  CSVReader.h  Database.cpp  Database.h  InputReader.cpp  InputReader.h  Postgres.cpp  Postgres.h  main.cpp
writer/tests/: CMakeLists.txt  test_CSVReader.cpp
writer/tests/test_files/csv_files/: test_2.csv
writer/tests/test_files/events/test_1/: test_1.csv
writer/tests/test_files/events/test_3/: test_3.csv
